# recommendation_system_rust

./: .gitignore  Cargo.toml  readme.md
src/: main.rs  rating.rs  rec_server.rs  rec_sys.rs  user.rs
